Hritik - Fixed 1st and 2nd Sonarqube issue in CompoundUndoManager